# lazyscan

./: .gitignore  Cargo.toml  README.md  config.toml  drain.ls  queue.ls
modules/: CVE-2021-41773.py  CVE-2021-42013.py
modules/apache/: CVE-2021-41773.py  CVE-2021-42013.py
src/: main.rs
src/config/: mod.rs
src/crawler/: mod.rs  queue.rs
src/scan/: apache.rs  mod.rs  nginx.rs  target.rs
src/shodan/: mod.rs
