[package]
name = "lazyscan"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
indicatif = "0.17.9"
indicatif-log-bridge = "0.2.3"
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["blocking"] }
scraper = "0.22.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
toml = "0.8.19"
